Fix canvas drawing blurry lines

--- a/main.css
+++ b/main.css
@@ -3,9 +3,8 @@
 }
 
 #canvas {
+	display: block;
 	margin: 0 auto;
-	width: 100%;
-	height: 500px;
 	border: 1px solid black;
 	background: black;
 }
